Project

General

Profile

Actions

Bug #16378

closed

async messenger hang in rados/singleton-nomsgr/{rados.yaml all/msgr.yaml}

Added by Samuel Just almost 8 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

sjust@teuthology:/a/yuriw-2016-06-15_15:52:06-rados-master_2016_06_15-distro-basic-smithi/262588

Actions #1

Updated by Samuel Just almost 8 years ago

  • Assignee set to Haomai Wang
Actions #2

Updated by Haomai Wang almost 8 years ago

  • Category set to msgr

This is a test program problem and not related to actual env.

Currently test program will create connection between A(Client) and B(Server) at first. Later we will get connection from B to A and send message. But A->B connect try will cause B->A connection stuck into STATE_WAIT. Unluckily A->B connection due to error injection and fall down STANDBY. At last, A->B is STANDBY and B->A is STATE_WAIT. So this test program will hang forever.

Actions #3

Updated by Haomai Wang almost 8 years ago

  • Status changed from New to In Progress
Actions #4

Updated by Haomai Wang almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #5

Updated by Samuel Just almost 8 years ago

sjust@teuthology:/a/samuelj-2016-06-21_10:29:56-rados-wip-sam-testing-distro-basic-smithi/268922

Actions #6

Updated by Samuel Just almost 8 years ago

  • Status changed from Fix Under Review to Resolved
Actions #7

Updated by Greg Farnum about 5 years ago

  • Project changed from Ceph to Messengers
  • Category deleted (msgr)
Actions

Also available in: Atom PDF