msg/async: close STATE_WAIT connection in short period

1. in practice, STATE_WAIT connection caused by racing connect should be
resolved in milliseconds level. we don't need to keep this connection
forever.
2. it will avoid unexpected osd peering hang because of outside network
problem.

Fixes: http://tracker.ceph.com/issues/16378
Signed-off-by: Haomai Wang <haomai@xsky.com>